--- a/website/templates/website/home.html
+++ b/website/templates/website/home.html
@@ -18,7 +18,7 @@
                 <ul class="nav masthead-nav">
                     <li class="active"><a href="{% url 'home' %}">Home</a></li>
                     <li><a href="{% url 'learnmore' %}">Learn more</a></li>
-                    <li><a href="{% url 'accounts:website_list' %}">Reports</a></li>
+                    <li><a href="{% url 'accounts:website_list' %}">Demo</a></li>
                 </ul>
             </div>
         </div>
