--- a/accounts/templates/accounts/login.html
+++ b/accounts/templates/accounts/login.html
@@ -13,10 +13,9 @@
                         <form action="" method="POST">
                             {% csrf_token %}
                             {{ form|bootstrap }}
-                            <p>
-                                <button class="btn btn-lime btn-lg btn-block" role="button" type="submit">Sign in
-                                </button>
-                            </p>
+                            <button class="btn btn-primary btn-lg btn-block btn-panel" role="button" type="submit">
+                                Sign in
+                            </button>
                         </form>
                     </div>
                 </div>
