--- a/accounts/templates/accounts/edit_website.html
+++ b/accounts/templates/accounts/edit_website.html
@@ -13,10 +13,8 @@
                         <form action="" method="POST">
                             {% csrf_token %}
                             {{ form|bootstrap }}
-                            <p>
-                                <button class="btn btn-lime btn-lg btn-block" role="button" type="submit">Save
-                                </button>
-                            </p>
+                            <button class="btn btn-primary btn-lg btn-block btn-panel" role="button" type="submit">Save
+                            </button>
                         </form>
                     </div>
                 </div>
