button style updates

--- a/website/templates/website/home.html
+++ b/website/templates/website/home.html
@@ -2,7 +2,7 @@
 {% load staticfiles %}
 {% block css %}
     {{ block.super }}
-    <link rel="stylesheet" href="{% static 'core/css/cover2.css' %}"/>
+    <link rel="stylesheet" href="{% static 'core/css/cover.css' %}"/>
 {% endblock %}
 
 {% block navbar %}
