--- a/website/templates/website/learnmore.html
+++ b/website/templates/website/learnmore.html
@@ -115,7 +115,7 @@
 {% block css %}
     {{ block.super }}
     <link rel="stylesheet" href="{% static 'core/css/learnmore.css' %}"/>
-    <link rel="stylesheet" href="{% static 'core/css/cover2.css' %}"/>
+    <link rel="stylesheet" href="{% static 'core/css/cover.css' %}"/>
 {% endblock %}
 
 {% block navbar %}
