--- a/core/templates/core/base.html
+++ b/core/templates/core/base.html
@@ -64,7 +64,7 @@
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
                     <li><a href="{% url 'home' %}">Home</a></li>
-                    <li><a href="#about">GitHub</a></li>
+                    <li><a href="https://github.com/dasf/insightful">GitHub</a></li>
                 </ul>
                 <ul class="nav navbar-nav navbar-right">
                     {% if request.user.is_authenticated %}
